# sahara

./: .gitmodules  CMakeLists.txt  README.md  cpm.dependencies
.github/workflows/: ci.yml  ci_coverage.yml  ci_on_pr.yml  cron_daily_check_tag.yml  cron_daily_cpm_version.yml  cron_weekly.yml
lib/clice/: .gitrepo
lib/clice/src/clice/: Argument.h
lib/cmake/: xxhash-config.cmake
lib/cmake/xxHash/: CMakeLists.txt
lib/ivio/: .gitrepo
lib/ivsigma/: .gitrepo
lib/ivsigma/src/ivsigma/: compact_encoding.h
lib/xxHash/: .gitrepo
src/sahara/: AdaptiveKmerIndex.cpp  AdaptiveKmerIndex.h  CMakeLists.txt  VarIndex.h  argp.h  columba_prepare.cpp  dr_dna.h  error_fmt.h  hash.h  index.cpp  isNonRedundant.h  kmer-index.cpp  kmer-search.cpp  main.cpp  rbi-index-dna4.cpp  rbi-index.cpp  rbi-search-dna4.cpp  rbi-search.cpp  read_simulator.cpp  search.cpp  search_scheme.cpp  single-index.cpp  single-search.cpp  tikz.h  uni-index.cpp  uni-search.cpp  utils.h
src/sahara/utils/: StopWatch.h  error_fmt.h
